@@ -12,9 +12,9 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 */
 
 
-#pragma off (unreferenced)
-static char rcsid[] = "$Id: number.c,v 1.1 2004-12-19 13:08:49 btb Exp $";
-#pragma on (unreferenced)
+#ifdef RCS
+static char rcsid[] = "$Id: number.c,v 1.2 2004-12-19 14:10:33 btb Exp $";
+#endif
 
 
 #include <stdio.h>
